# student-managment-rust-api

./: Cargo.toml  Dockerfile
.github/workflows/: rust-clippy.yml
src/: main.rs  students.rs
